fixed hamburger color on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,7 @@ img {
   padding: 8px 12px;
   font-size: 1.5rem;
   cursor: pointer;
+  color: #000;
 }
 
 .body {
